# NEOENERGIA-DIMENSIONAMENTO-NR-23

./: .gitignore  README.md  aplicação para dimensionamento.txt  foi-me retornado o seguinte não foi.txt  pyproject.toml  reame  requirements.txt  retorno
scripts/: generate_sample_data.py
src/: __init__.py  engine.py  geo.py  main.py  utils.py
